--- a/Focusing/app/src/main/res/layout/intro.xml
+++ b/Focusing/app/src/main/res/layout/intro.xml
@@ -1,21 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="180dp"
-    android:layout_height="180dp"
-    android:layout_gravity="center"
-    android:background="@mipmap/focus_logo"
-    android:orientation="vertical"
-    android:weightSum="1">
+
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".Intro"
+    >
+
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/focus"
+        android:id="@+id/imageView2"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="110sp"
-        android:text="@string/intro_quote"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        android:layout_marginTop="35dp"
-        android:layout_marginLeft="10dp"
-        android:id="@+id/textView"
-        android:layout_weight="0.36" />
 
-</LinearLayout>
+        android:layout_width="200dp"
+
+        android:layout_height="200dp"
+
+
+        android:text="@string/intro_quote"
+
+        android:textSize="20sp"
+
+        android:textStyle="bold"
+
+        android:layout_marginLeft="10dp"
+
+        android:id="@+id/textView"
+        android:gravity="center"
+
+        android:layout_marginBottom="10dp"
+        android:layout_alignBottom="@+id/imageView2"
+        android:layout_centerHorizontal="true" />
+
+
+</RelativeLayout>
