--- a/Focusing/app/src/main/res/layout/content_home3.xml
+++ b/Focusing/app/src/main/res/layout/content_home3.xml
@@ -10,8 +10,9 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.luisrodriguez.focusing.Home"
-    tools:showIn="@layout/app_bar_home">
+    tools:context="com.example.luisrodriguez.focusing.Home">
+
+
 
     <TextView
         android:text="@string/data_usage"
@@ -44,10 +45,20 @@
         android:layout_alignParentEnd="true" />
 
     <TextView
-        android:text="@string/data_usagethings"
-        android:layout_width="300dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="150dp"
+        android:text="You spent 12 hours (720 minutes)procrastinating this week"
+        android:layout_width="250dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="460dp"
+        android:layout_centerHorizontal="true" />
+
+
+
+    <TextView
+        android:text="Weekly Limit: Exceeded by 600 minutes"
+
+        android:layout_width="250dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="500dp"
         android:layout_centerHorizontal="true" />
 
 
