--- a/Focusing/app/src/main/res/layout/content_sub_profile.xml
+++ b/Focusing/app/src/main/res/layout/content_sub_profile.xml
@@ -31,8 +31,8 @@
         android:id="@+id/textView3" />
 
     <TextView
-        android:text="Info: "
-        android:layout_width="100dp"
+        android:text="Info: CS student"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/imageView"
         android:layout_centerHorizontal="true"
@@ -40,8 +40,8 @@
         android:id="@+id/textView4" />
 
     <TextView
-        android:text="Email:"
-        android:layout_width="100dp"
+        android:text="Email: joby@gmail.com"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/imageView"
         android:layout_centerHorizontal="true"
@@ -49,8 +49,8 @@
         android:id="@+id/textView5" />
 
     <TextView
-        android:text="Daily Goal:"
-        android:layout_width="100dp"
+        android:text="Daily Goal: TBD"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/imageView"
         android:layout_centerHorizontal="true"
@@ -58,8 +58,8 @@
         android:id="@+id/textView6" />
 
     <TextView
-        android:text="Weekley Goal:"
-        android:layout_width="100dp"
+        android:text="Weekley Goal: TBD"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/imageView"
         android:layout_centerHorizontal="true"
